--- a/config/nginx/conf.d/local.conf
+++ b/config/nginx/conf.d/local.conf
@@ -9,7 +9,7 @@ upstream hello_server {
 server {
 
     listen 80;
-    server_name 2998793-yg45018.twc1.net;
+    server_name 2998793-yg45018.twc1.net www.2998793-yg45018.twc1.net;
 
     location / {
         # everything is passed to Gunicorn
